objects/Event_Session__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time_Text__c</fullName>
        <formula>TEXT(HOUR(End_Time__c)) &amp; &quot;:&quot; &amp; IF(MINUTE(End_Time__c) &lt; 10, TEXT(MINUTE(End_Time__c)) &amp; &quot;0&quot;, TEXT(MINUTE(End_Time__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Time (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Event_Function__c</fullName>
        <label>Event/Function</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>Agendas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event_Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipName>Agenda</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Host</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Scheduled_Delegates__c</fullName>
        <label>Session Bookings (TOTAL)</label>
        <summaryFilterItems>
            <field>Event_Session_Booking__c.isSpeaker__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Session_Booking__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Participating_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participating Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Room</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Event_Venue__c</field>
                <operation>equals</operation>
                <valueField>Venue_Rooms__c.Venue__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Venue_Rooms__c</referenceTo>
        <relationshipName>Agenda</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduled_Delegates_Confirmed__c</fullName>
        <label>Session Bookings (Confirmed)</label>
        <summaryFilterItems>
            <field>Event_Session_Booking__c.Invitation_Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Event_Session_Booking__c.isSpeaker__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Session_Booking__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Session_Bookings_Walk_Ins__c</fullName>
        <label>Session Bookings (Walk Ins)</label>
        <summaryFilterItems>
            <field>Event_Session_Booking__c.Invitation_Status__c</field>
            <operation>equals</operation>
            <value>Walk In</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Session_Booking__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Time_Text__c</fullName>
        <formula>TEXT(HOUR(Start_Time__c)) &amp; &quot;:&quot; &amp; IF(MINUTE(Start_Time__c) &lt; 10, TEXT(MINUTE(Start_Time__c)) &amp; &quot;0&quot;, TEXT(MINUTE(Start_Time__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Time (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 on 1</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Session</label>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Session_Date_Validation</fullName>
        <active>true</active>
        <description>To prevent users from adding a session for a date outside of event date</description>
        <errorConditionFormula>Date__c  &lt; Event_Function__r.Start_Date__c  || Date__c &gt;  Event_Function__r.End_Date__c</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>Please note that you can not add a session date before the event start date or after the event end date.</errorMessage>
    </validationRules>
</CustomObject>